src/components/sidebar/sidebar.module.scss
@import '/src//styles/variables';

.sidebar {
    display: inline-flex;
    height: 100vh;

    @include smallDevice {
        height: calc(100vh - #{$navbarHeight});
        position: absolute;
        z-index: 99;
        width: 100% !important;
    }
}

.openSidebar {
    width: $sidebarWidth;
}

.sidebarButton {
    border-right: 1px solid var(--chakra-colors-gray-700) !important;

    &:focus {
        box-shadow: none !important;
    }

    @include smallDevice {
        display: none;
    }
}

